# RandomForest

./: .gitignore  CMakeLists.txt  Makefile  RandomForest.h  common.h  main.cpp
include/: DecisionTree.h  Node.h
src/: DecisionTree.cpp  Node.cpp  RandomForest.cpp
